--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -56,8 +56,8 @@ steps:
     projects: '**/*.csproj'
     publishWebProjects: false
     arguments: '--no-build --configuration Release --output $(Build.ArtifactStagingDirectory)/Release'
-    zipAfterPublish: truey
+    zipAfterPublish: true
 
-- task: PublishBuildArtifacts@1
+- task: PublishBuildArtefacts@1
   displayName: 'Publish Artifact: drop'
   condition: succeeded()
